--- a/theme/products.html
+++ b/theme/products.html
@@ -17,22 +17,28 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
 
-  <!-- Estilo do template -->
+<!--Custom Styles for this template-->
   <link href="css/business-casual.min.css" rel="stylesheet">
+  <!--Animação-->
+  <link type="text/css" rel="stylesheet" media="screen" href="mystyle/letras_my.css"></link>
 
 </head>
 
 <body>
 
   <h1 class="site-heading text-center text-white d-none d-lg-block">
+    <!-- first title-->
     <span class="site-heading-upper text-primary mb-3">Dama</span>
-    <span class="site-heading-lower">Nossos produtos</span>
+    <!--Second title-->
+     <h1 class="ml9" align="center">
+    <span class="letters">Nossos produtos</span>
+    </h1>
   </h1>
 
   <!-- Navegação -->
-  <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
+   <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
     <div class="container">
-      <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Start Bootstrap</a>
+      <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">DAMA BEER</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -69,6 +75,8 @@
           </div>
         </div>
         <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/3.jpg" alt="">
+
+      </style>>
         <div class="product-item-description d-flex mr-auto">
           <div class="bg-faded p-5 rounded">
             <p class="mb-0">PENSAR. UMA COMBINAÇÃO DE IDEIAS QUE NOS LEVA A TOMAR UMA DECISÃO. DECISÕES ESSAS QUE NOS DESAFIAM DIA APÓS DIA. HOJE VOCÊ SE DEPARA COM MAIS UM DESSES DESAFIOS, DAQUELES QUE MEXEM COM SUAS EMOÇÕES E TE FAZ SUAR AS MÃOS. MAS AQUI NÃO HÁ ESPAÇO PARA EMOÇÕES E SIM PARA O RACIOCÍNIO LÓGICO. LEVAR, OU NÃO, ESTA GARRAFA PARA CASA?VOCÊ NÃO SABE O QUE ENCONTRARÁ NELA, O AMARGOR, SUA COLORAÇÃO, SEU AROMA, NÃO VAMOS DESCREVÊ-LA, QUEREMOS QUE VOCÊ TIRE SUAS PRÓPRIAS CONCLUSÕES.DESAFIE-SE. NÃO HESITE. DESCUBRA O NOVO. ESSA PODE SER UMA OPORTUNIDADE ÚNICA, USE A RAZÃO.</p>
@@ -127,8 +135,10 @@
   </footer>
 
   <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
+  script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="vendor/bootstrap/js/anime.min.js"></script>
+  <script src="mystyle/letras_my.js"></script>
 
 </body>
 
