--- a/theme/index.html
+++ b/theme/index.html
@@ -20,6 +20,11 @@
   <!-- Custom styles for this template -->
   <link href="css/business-casual.min.css" rel="stylesheet">
 
+<!-- Custom styles for this template -->
+  <link href="css/business-casual.min.css" rel="stylesheet">
+  <!-- css animaçao-->
+  <link type="text/css" rel="stylesheet" media="screen" href="mystyle/letras_my.css"></link>
+
 </head>
 
 <body>
@@ -28,9 +33,10 @@
     <!-- Dama Bier- Título do Site-->
     <span class="site-heading-upper text-primary mb-3">Dama Beer</span>
     <!-- Segundo Título do Site-->
-    <span class="site-heading-lower">Dama Bier é premiada no World Beer Award 2016</span>
-
-  </h1>
+    <span class="m19" align="center">
+      <span class="letters"> Dama Bier é premiada</span>
+    </h1>
+  </h1> 
 
   <!-- Navegação -->
   <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
@@ -104,7 +110,8 @@
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+  <script src="vendor/bootstrap/js/anime.min.js"></script>
+  <script src="mystyle/letras_my.js"></script>
 </body>
 
 </html>
