--- a/theme/about.html
+++ b/theme/about.html
@@ -25,9 +25,13 @@
 <body>
 
   <h1 class="site-heading text-center text-white d-none d-lg-block">
+    <!-- Primeiro Título-->
     <span class="site-heading-upper text-primary mb-3">Dama Beer</span>
-    <span class="site-heading-lower">Dama Bier é premiada no World Beer Award 2016</span>
+    <!--Segundo título-->
+    <h1 class="m19" align="center">
+    <span class="letters">Dama Bier é premiada no World Beer Award 2016</span>
   </h1>
+</h1>
 
   <!-- Navegação -->
   <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
