--- a/theme/index.html
+++ b/theme/index.html
@@ -17,6 +17,41 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
 
+<!-- Animação CSS-->
+<style type="text/css" media="screen">
+  .ml14 {
+  font-weight: 200;
+  font-size: 3.2em;
+}
+
+.ml14 .text-wrapper {
+  position: relative;
+  display: inline-block;
+  padding-top: 0.1em;
+  padding-right: 0.05em;
+  padding-bottom: 0.15em;
+}
+
+.ml14 .line {
+  opacity: 0;
+  position: absolute;
+  left: 0;
+  height: 2px;
+  width: 100%;
+  background-color: #fff;
+  transform-origin: 100% 100%;
+  bottom: 0;
+}
+
+.ml14 .letter {
+  display: inline-block;
+  line-height: 1em;
+}
+
+
+</style>
+
+
   <!-- Custom styles for this template -->
   <link href="css/business-casual.min.css" rel="stylesheet">
 
@@ -24,6 +59,7 @@
   <link href="css/business-casual.min.css" rel="stylesheet">
   <!-- css animaçao-->
   <link type="text/css" rel="stylesheet" media="screen" href="mystyle/letras_my.css"></link>
+
 
 </head>
 
@@ -33,10 +69,19 @@
     <!-- Dama Bier- Título do Site-->
     <span class="site-heading-upper text-primary mb-3">Dama Beer</span>
     <!-- Segundo Título do Site-->
-    <span class="m19" align="center">
+
+<!-- Animação HTML-->
+<h1 class="ml14" align="center">
+  <span class="text-wrapper">
+    <span class="letters">Dama Bier é premiada!</span>
+    <span class="line"></span>
+  </span>
+</h1>
+
+ <!-- <span class="m19" align="center">
       <span class="letters"> Dama Bier é premiada</span>
     </h1>
-  </h1> 
+  </h1> -->
 
   <!-- Navegação -->
   <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
@@ -112,6 +157,40 @@
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="vendor/bootstrap/js/anime.min.js"></script>
   <script src="mystyle/letras_my.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+<script>
+
+//Animação de texto JavaScript
+
+var textWrapper = document.querySelector('.ml14 .letters');
+textWrapper.innerHTML = textWrapper.textContent.replace(/\S/g, "<span class='letter'>$&</span>");
+
+anime.timeline({loop: true})
+  .add({
+    targets: '.ml14 .line',
+    scaleX: [0,1],
+    opacity: [0.5,1],
+    easing: "easeInOutExpo",
+    duration: 900
+  }).add({
+    targets: '.ml14 .letter',
+    opacity: [0,1],
+    translateX: [40,0],
+    translateZ: 0,
+    scaleX: [0.3, 1],
+    easing: "easeOutExpo",
+    duration: 800,
+    offset: '-=600',
+    delay: (el, i) => 150 + 25 * i
+  }).add({
+    targets: '.ml14',
+    opacity: 0,
+    duration: 1000,
+    easing: "easeOutExpo",
+    delay: 1000
+  });
+</script>
+
 </body>
 
 </html>
